--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-       <div>
+       <div class="bottom" >
         <nav class="navbar box display-flex">
             <div class="logo display-flex">
                 <img src="assets/logo.png" alt="">
@@ -84,7 +84,7 @@
 
             <div class="arow">
                 <div class="aro-1 hobe">
-                    <button><i class="fa-solid fa-greater-than"></i></button>
+                    <button><i class="fa-solid fa-chevron-left"></i></button>
                  </div>
                  <div class="aro-2 hobe">
                     <button><i class="fa-solid fa-chevron-right"></i></button>
@@ -163,7 +163,7 @@
                 <div class="">
                     <div class="logo-kids display-flex">
                         <div class="logo-f display-flex">
-                            <img src="assets/logo.png" alt="">
+                            <img src="assets/Group 1.png" alt="">
                             <h2 class="cmn-color-f title-f">Kids <br>Education</h2>
                         </div>
                         <!-- <h2 class="cmn-color-f title-f">Kids <br>Education</h2> -->
