added something change

--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
                 <li class="link-3"><a href="">Facilities</a></li>
                 <li class="link-4"><a href="">Admission</a></li>
             </ul>
-            <button class="btn">contact</button>
+            <button class="btn hobe">contact</button>
     
             <div class="hide">
                 <i class="fa-solid fa-bars"></i>
             </div> 
-            <!-- <hr class="hr hide"> -->
            </nav>
        </div>
 
-       <marquee>if you want to build your kids follow this</marquee>
+       <marquee scrollamount="7" class="marquee">If you want to build your kids, You can follow this.</marquee>
 
 
           <!-- banner -->
@@ -38,7 +37,7 @@
          <div class="banner-content">
                 <h1 class="banner-title"><span class="word-1">Empowering</span><br>students from small <br> age <span class="word-2">towards vision</span></h1>
                 <h5 class="banner-description">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</h5>
-                <button class="btn-primary">Enroll Now</button>
+                <button class="btn-primary hobe">Enroll Now</button>
          </div>
          <div class="banner-img">
             <img src="assets/hero-kids.png" alt="">
@@ -57,27 +56,21 @@
                 <div class="kids-contain-1 kids">
                     <img src="assets/kinder.png" alt="">
                     <h3 class="kids-title">Kinder (3-6) Years</h3>
-                    <p class="kids-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="kids-description">Healthy food for children include fruits, vegetables, whole grains, dairy, & protein to support growth.</p>
                     <p class="read-more-1">read more</p>
                 </div>
 
                 <div class="kids-contain-2 kids">
                     <img src="assets/elementary.png" alt="">
                     <h3 class="kids-title">Elementary School</h3>
-                    <p class="kids-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="kids-description">children learn basics like reading, writing, math, and teamwork, fostering curiosity, creativity, and lifelong learning skills.</p>
                     <p class="read-more-2">read more</p>
                 </div>
 
                 <div class="kids-contain-3 kids">
                     <img src="assets/middle.png" alt="">
                     <h3 class="kids-title">Middle (10-16) Years</h3>
-                    <p class="kids-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="kids-description">The middle years, from 10 to 16, are vital for growth, learning, and self-discovery, shaping lifelong values and skills.</p>
                     <p class="read-more-3">read more</p>
                 </div>
             </div>
@@ -149,7 +142,7 @@
                 </div>
 
                     <div class="view-1">
-                        <button class="btn-primary view">view All</button>
+                        <button class="btn-primary view hobe">view All</button>
                     </div>
 
                 </div>
@@ -160,7 +153,7 @@
     <footer>
         <div class="box-f">
             <div class="footer-container">
-                <div class="">
+                <div>
                     <div class="logo-kids display-flex">
                         <div class="logo-f display-flex">
                             <img src="assets/Group 1.png" alt="">
